[gd_scene load_steps=41 format=3 uid="uid://dlt7ttjw32ex0"]

[ext_resource type="Script" path="res://scripts/main_menu/PlayButtonController.gd" id="1_8rt8l"]
[ext_resource type="Script" path="res://scripts/main_menu/MainMenuController.gd" id="1_c4udn"]
[ext_resource type="Script" path="res://scripts/ExitController.gd" id="2_b48f4"]
[ext_resource type="Script" path="res://scripts/main_menu/FullscreenController.gd" id="3_dto5m"]
[ext_resource type="Material" uid="uid://crejfbfo2v0n5" path="res://materials/material_multiply.tres" id="3_pbkdr"]
[ext_resource type="Theme" uid="uid://ms88awncv3el" path="res://fonts/theme_main_menu.tres" id="4_jarfs"]
[ext_resource type="Texture2D" uid="uid://bkb0xhfnyvelq" path="res://sprites/gui/main_menu/scale_red.png" id="4_xndjh"]
[ext_resource type="Texture2D" uid="uid://c2v06bwk37uj1" path="res://sprites/gui/main_menu/background.png" id="5_rngrt"]
[ext_resource type="Texture2D" uid="uid://thkunwkuh2p5" path="res://sprites/gui/main_menu/buildings.png" id="6_wu64p"]
[ext_resource type="AudioStream" uid="uid://bhtyievaha1og" path="res://audio/sfx/button_click.wav" id="7_b8inn"]
[ext_resource type="AudioStream" uid="uid://bl7m17s65bljr" path="res://audio/sfx/button_hover.wav" id="8_yvf76"]
[ext_resource type="Script" path="res://scripts/main_menu/LanguageButtonController.gd" id="9_klwsj"]
[ext_resource type="Script" path="res://scripts/main_menu/CreditsController.gd" id="10_yj2eq"]
[ext_resource type="Material" uid="uid://dmeo3e7br5n5i" path="res://materials/material_black_and_white.tres" id="14_iawff"]
[ext_resource type="Material" uid="uid://cn3u2jvxl2l1u" path="res://materials/material_glitch.tres" id="15_0rrv4"]
[ext_resource type="Material" uid="uid://cdmaafl6lva8k" path="res://materials/material_glitch_mini.tres" id="16_1okjg"]
[ext_resource type="Material" uid="uid://55ysdfshei0w" path="res://materials/material_interactuable.tres" id="17_48070"]
[ext_resource type="Material" uid="uid://dnlwu8akusvmg" path="res://materials/material_lighten.tres" id="18_1dwkl"]
[ext_resource type="Material" uid="uid://bvwydqbd3iivq" path="res://materials/material_lighten_contrast.tres" id="19_d0jdw"]
[ext_resource type="Material" uid="uid://xtfcuwi0f08h" path="res://materials/material_outline.tres" id="20_3rbyp"]
[ext_resource type="Material" uid="uid://dx3k0ee0gkrmu" path="res://materials/material_white_noise.tres" id="21_a0n3x"]

[sub_resource type="Animation" id="Animation_45fjg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_js4u3"]
resource_name = "tilt"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0174533, 0.0174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cn8fl"]
_data = {
"RESET": SubResource("Animation_45fjg"),
"tilt": SubResource("Animation_js4u3")
}

[sub_resource type="Animation" id="Animation_k8nhs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_lclxn"]
resource_name = "scale"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 0.95)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gfa02"]
_data = {
"RESET": SubResource("Animation_k8nhs"),
"scale": SubResource("Animation_lclxn")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ky1bn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_soxon"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bkruw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n4srq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h442g"]

[sub_resource type="Shader" id="Shader_hkikv"]
code = "shader_type canvas_item;

uniform float shake_power = 0.03;
uniform float shake_rate : hint_range( 0.0, 1.0 ) = 0.2;
uniform float shake_rate_offset = 0;
uniform float shake_freeze: hint_range( 0.0, 1.0, 1.0 ) = 1.0;
uniform float shake_speed = 5.0;
uniform float shake_block_size = 30.5;
uniform float shake_color_rate : hint_range( 0.0, 1.0 ) = 0.01;
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;

float random( float seed )
{
	return fract( 543.2543 * sin( dot( vec2( seed, seed ), vec2( 3525.46, -54.3415 ) ) ) );
}

void fragment( )
{
	float enable_shift = float(
		random( trunc( ((TIME * shake_freeze) + shake_rate_offset) * shake_speed ) )
	<	shake_rate
	);

	vec2 fixed_uv = SCREEN_UV;
	fixed_uv.x += (
		random(
			( trunc( SCREEN_UV.y * shake_block_size ) / shake_block_size )
		+	(TIME * shake_freeze)
		) - 0.5
	) * shake_power * enable_shift;

	vec4 pixel_color = texture(SCREEN_TEXTURE, fixed_uv);
	pixel_color.r = mix(
		pixel_color.r
	,	texture( SCREEN_TEXTURE, fixed_uv + vec2( shake_color_rate, 0.0 ) ).r
	,	enable_shift
	);
	pixel_color.b = mix(
		pixel_color.b
	,	texture( SCREEN_TEXTURE, fixed_uv + vec2( -shake_color_rate, 0.0 ) ).b
	,	enable_shift
	);
	COLOR = pixel_color;
}
"
metadata/_edit_res_path = "res://materials/shader_glitch.gdshader"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oiwhk"]
shader = SubResource("Shader_hkikv")
shader_parameter/shake_power = 0.01
shader_parameter/shake_rate = 1.0
shader_parameter/shake_rate_offset = 0.0
shader_parameter/shake_freeze = 1.0
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[sub_resource type="Animation" id="Animation_evkmx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Buildings:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 324)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buildings2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1728, 324)]
}

[sub_resource type="Animation" id="Animation_rpw8h"]
resource_name = "parallax"
length = 40.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Buildings:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 40),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, 324), Vector2(-576, 324)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buildings2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 40),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1728, 324), Vector2(576, 324)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pjxlb"]
_data = {
"RESET": SubResource("Animation_evkmx"),
"parallax": SubResource("Animation_rpw8h")
}

[sub_resource type="Animation" id="Animation_ob2gj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 324)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1728, 324)]
}

[sub_resource type="Animation" id="Animation_webf4"]
resource_name = "parallax"
length = 80.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 80),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, 324), Vector2(-576, 324)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 80),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1721, 324), Vector2(569, 324)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tqs6e"]
_data = {
"RESET": SubResource("Animation_ob2gj"),
"parallax": SubResource("Animation_webf4")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_c4udn")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(3.81457, 3.81176)
texture = ExtResource("5_rngrt")

[node name="Background2" type="Sprite2D" parent="."]
position = Vector2(1728, 324)
scale = Vector2(3.81457, 3.81176)
texture = ExtResource("5_rngrt")

[node name="Buildings" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(3.81457, 3.81176)
texture = ExtResource("6_wu64p")

[node name="Buildings2" type="Sprite2D" parent="."]
position = Vector2(1728, 324)
scale = Vector2(3.81457, 3.81176)
texture = ExtResource("6_wu64p")

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
position = Vector2(131, 46)
copy_mode = 2

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 131.0
offset_top = 46.0
offset_right = 1044.0
offset_bottom = 172.0
pivot_offset = Vector2(450, 60)
theme = ExtResource("4_jarfs")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_font_sizes/normal_font_size = 190
text = "The Grand Tilt"

[node name="AnimationPlayerTitleTilt" type="AnimationPlayer" parent="Title"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_cn8fl")
}
autoplay = "tilt"

[node name="AnimationPlayerTitleScale" type="AnimationPlayer" parent="Title"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_gfa02")
}
autoplay = "scale"

[node name="Play" type="Button" parent="."]
offset_left = 458.0
offset_top = 238.0
offset_right = 691.0
offset_bottom = 302.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ky1bn")
theme_override_styles/hover = SubResource("StyleBoxEmpty_soxon")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bkruw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n4srq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h442g")
script = ExtResource("1_8rt8l")

[node name="Text" type="RichTextLabel" parent="Play"]
layout_mode = 0
offset_left = -458.0
offset_top = 1.0
offset_right = 693.0
offset_bottom = 61.0
mouse_filter = 2
theme = ExtResource("4_jarfs")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]MENU_OPTION_PLAY"

[node name="BackBufferCopy3" type="BackBufferCopy" parent="Play"]
position = Vector2(-327, -192)
copy_mode = 2

[node name="AudioClick" type="AudioStreamPlayer" parent="Play"]
stream = ExtResource("7_b8inn")
volume_db = -25.0

[node name="AudioHover" type="AudioStreamPlayer" parent="Play"]
stream = ExtResource("8_yvf76")
volume_db = -25.0

[node name="Glitch" type="ColorRect" parent="Play"]
visible = false
material = SubResource("ShaderMaterial_oiwhk")
layout_mode = 0
offset_left = -50.0
offset_top = -3.0
offset_right = 282.0
offset_bottom = 69.0
mouse_filter = 2

[node name="PlayEnglish" type="Button" parent="."]
offset_left = 458.0
offset_top = 331.0
offset_right = 691.0
offset_bottom = 395.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ky1bn")
theme_override_styles/hover = SubResource("StyleBoxEmpty_soxon")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bkruw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n4srq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h442g")
script = ExtResource("9_klwsj")

[node name="Text" type="RichTextLabel" parent="PlayEnglish"]
layout_mode = 0
offset_left = -458.0
offset_top = 1.0
offset_right = 693.0
offset_bottom = 61.0
mouse_filter = 2
theme = ExtResource("4_jarfs")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]MENU_OPTION_ENGLISH"

[node name="AudioClick" type="AudioStreamPlayer" parent="PlayEnglish"]
stream = ExtResource("7_b8inn")
volume_db = -25.0

[node name="AudioHover" type="AudioStreamPlayer" parent="PlayEnglish"]
stream = ExtResource("8_yvf76")
volume_db = -25.0

[node name="PlaySpanish" type="Button" parent="."]
offset_left = 449.0
offset_top = 389.0
offset_right = 701.0
offset_bottom = 453.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ky1bn")
theme_override_styles/hover = SubResource("StyleBoxEmpty_soxon")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bkruw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n4srq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h442g")
script = ExtResource("9_klwsj")
play_language = 1

[node name="Text" type="RichTextLabel" parent="PlaySpanish"]
layout_mode = 0
offset_left = -448.0
offset_top = 1.0
offset_right = 702.0
offset_bottom = 61.0
mouse_filter = 2
theme = ExtResource("4_jarfs")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]MENU_OPTION_SPANISH"

[node name="AudioClick" type="AudioStreamPlayer" parent="PlaySpanish"]
stream = ExtResource("7_b8inn")
volume_db = -25.0

[node name="AudioHover" type="AudioStreamPlayer" parent="PlaySpanish"]
stream = ExtResource("8_yvf76")
volume_db = -25.0

[node name="Fullscreen" type="Button" parent="."]
offset_left = 300.0
offset_top = 444.0
offset_right = 843.0
offset_bottom = 508.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ky1bn")
theme_override_styles/hover = SubResource("StyleBoxEmpty_soxon")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bkruw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n4srq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h442g")
script = ExtResource("3_dto5m")

[node name="Text" type="RichTextLabel" parent="Fullscreen"]
layout_mode = 0
offset_left = -300.0
offset_top = 4.0
offset_right = 851.0
offset_bottom = 64.0
mouse_filter = 2
theme = ExtResource("4_jarfs")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]MENU_OPTION_FULLSCREEN"

[node name="AudioClick" type="AudioStreamPlayer" parent="Fullscreen"]
stream = ExtResource("7_b8inn")
volume_db = -25.0

[node name="AudioHover" type="AudioStreamPlayer" parent="Fullscreen"]
stream = ExtResource("8_yvf76")
volume_db = -25.0

[node name="Credits" type="Button" parent="."]
offset_left = 415.0
offset_top = 504.0
offset_right = 735.0
offset_bottom = 568.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ky1bn")
theme_override_styles/hover = SubResource("StyleBoxEmpty_soxon")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bkruw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n4srq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h442g")
script = ExtResource("10_yj2eq")

[node name="Text" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_left = -415.0
offset_top = 4.0
offset_right = 736.0
offset_bottom = 64.0
mouse_filter = 2
theme = ExtResource("4_jarfs")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]MENU_OPTION_CREDITS"

[node name="AudioClick" type="AudioStreamPlayer" parent="Credits"]
stream = ExtResource("7_b8inn")
volume_db = -25.0

[node name="AudioHover" type="AudioStreamPlayer" parent="Credits"]
stream = ExtResource("8_yvf76")
volume_db = -25.0

[node name="Exit" type="Button" parent="."]
offset_left = 504.0
offset_top = 569.0
offset_right = 643.0
offset_bottom = 633.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ky1bn")
theme_override_styles/hover = SubResource("StyleBoxEmpty_soxon")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bkruw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n4srq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h442g")
script = ExtResource("2_b48f4")

[node name="Text" type="RichTextLabel" parent="Exit"]
layout_mode = 0
offset_left = -503.0
offset_top = 4.0
offset_right = 647.0
offset_bottom = 64.0
mouse_filter = 2
theme = ExtResource("4_jarfs")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]MENU_OPTION_EXIT
"

[node name="AudioHover" type="AudioStreamPlayer" parent="Exit"]
stream = ExtResource("8_yvf76")
volume_db = -25.0

[node name="Scale" type="Sprite2D" parent="."]
material = ExtResource("3_pbkdr")
position = Vector2(576, 324)
scale = Vector2(3.81457, 3.81176)
texture = ExtResource("4_xndjh")

[node name="AnimationPlayerBuildings" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pjxlb")
}
autoplay = "parallax"

[node name="AnimationPlayerBackground" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tqs6e")
}
autoplay = "parallax"

[node name="ShadersPreload" type="Node2D" parent="."]
position = Vector2(221, -108)

[node name="BlackAndWhite" type="ColorRect" parent="ShadersPreload"]
material = ExtResource("14_iawff")
offset_left = -434.0
offset_top = 21.0
offset_right = -205.0
offset_bottom = 109.0

[node name="Glitch" type="ColorRect" parent="ShadersPreload"]
material = ExtResource("15_0rrv4")
offset_left = -436.0
offset_top = 21.0
offset_right = -207.0
offset_bottom = 109.0

[node name="GlitchMini" type="ColorRect" parent="ShadersPreload"]
material = ExtResource("16_1okjg")
offset_left = -436.0
offset_top = 21.0
offset_right = -207.0
offset_bottom = 109.0

[node name="Interactuable" type="ColorRect" parent="ShadersPreload"]
material = ExtResource("17_48070")
offset_left = -438.0
offset_top = 21.0
offset_right = -209.0
offset_bottom = 109.0

[node name="Lighten" type="ColorRect" parent="ShadersPreload"]
material = ExtResource("18_1dwkl")
offset_left = -440.0
offset_top = 21.0
offset_right = -211.0
offset_bottom = 109.0

[node name="LightenContrast" type="ColorRect" parent="ShadersPreload"]
material = ExtResource("19_d0jdw")
offset_left = -442.0
offset_top = 21.0
offset_right = -213.0
offset_bottom = 109.0

[node name="Multiply" type="ColorRect" parent="ShadersPreload"]
material = ExtResource("3_pbkdr")
offset_left = -444.0
offset_top = 21.0
offset_right = -215.0
offset_bottom = 109.0

[node name="Outline" type="ColorRect" parent="ShadersPreload"]
material = ExtResource("20_3rbyp")
offset_left = -446.0
offset_top = 21.0
offset_right = -217.0
offset_bottom = 109.0

[node name="WhiteNoise" type="ColorRect" parent="ShadersPreload"]
material = ExtResource("21_a0n3x")
offset_left = -448.0
offset_top = 21.0
offset_right = -219.0
offset_bottom = 109.0

[node name="Hide" type="ColorRect" parent="ShadersPreload"]
offset_left = -457.0
offset_top = -106.0
offset_right = -205.0
offset_bottom = 109.0
color = Color(0.352941, 0.14902, 0.776471, 1)
